--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,10 @@
 # Adding a line to force a rebuild
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Chris Salam!
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: writing code and television.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/chrissalam
@@ -18,15 +18,15 @@ avatar: https://avatars.githubusercontent.com/chrissalam
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: christopher.salam@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
+  github: chrissalam
+  instagram: chrisrsalam
+  linkedin: christophersalam
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: jekyllrb
+  twitter: chrisrsalam
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -41,7 +41,7 @@ google_analytics:
 
 # Your website URL (e.g. http://barryclark.github.io or http://www.barryclark.co)
 # Used for Sitemap.xml and your RSS feed
-url:
+url: christophersalam.com
 
 # If you're hosting your site at a Project repository on GitHub pages
 # (http://yourusername.github.io/repository-name)
