--- a/_config.yml
+++ b/_config.yml
@@ -11,6 +11,8 @@ description: writing code and television.
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/chrissalam
 
+theme: jekyll-theme-minimal
+
 #
 # Flags below are optional
 #
